--- a/smoothies.html
+++ b/smoothies.html
@@ -36,6 +36,7 @@
       distinctio natus error.
     </p>
     <h2>Green smoothie</h2>
+    <img src="Green-Smoothie.jpeg">
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit iusto
       aliquam expedita quidem. Ipsum aliquam laudantium officia, quod reiciendis
