--- a/smoothies.html
+++ b/smoothies.html
@@ -4,7 +4,8 @@
     <title>DIY Smoothie recipe!!</title>
   </head>
   <body>
-    <h1>Smoothie</h1>
+    <h1>Smoothieddddd</h1>
+    <hr>
     <p>
       A <b>smoothie</b> or smoothie is a drink made from pureed raw fruit and/or
       vegetables, using a blender.
@@ -36,7 +37,7 @@
       distinctio natus error.
     </p>
     <h2>Green smoothie</h2>
-    <img src="Green-Smoothie.jpeg">
+    <img src="Green-Smoothie.jpeg" alt="A picture of Green Smoothie">
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit iusto
       aliquam expedita quidem. Ipsum aliquam laudantium officia, quod reiciendis
@@ -51,3 +52,4 @@
     </p>
   </body>
 </html>
+<!-- sfsdf  -->
