add register page

--- a/smoothies.html
+++ b/smoothies.html
@@ -4,52 +4,63 @@
     <title>DIY Smoothie recipe!!</title>
   </head>
   <body>
-    <h1>Smoothieddddd</h1>
-    <hr>
-    <p>
-      A <b>smoothie</b> or smoothie is a drink made from pureed raw fruit and/or
-      vegetables, using a blender.
-    </p>
-    <p>
+    <nav>
+      <ul>
+        <li><a href="home">home</a></li>
+        <li><a href="liquid">liquid</a></li>
+      </ul>
+    </nav>
+    <main>
+      <h1>
+        Smoothie
+        <sup><a href="https://en.wikipedia.org/wiki/Smoothie">[1]</a></sup>
+      </h1>
+      <hr />
+      <p>
+        A <b>smoothie</b> or smoothie is a drink made from pureed raw fruit
+        and/or vegetables, using a blender.
+      </p>
+      <p></p>
       <h2>Liquid base</h2>
       <ul>
-          <li>fruit</li>
-          <li>juice</li>
-          <li>dairy</li>
+        <li>fruit</li>
+        <li>juice</li>
+        <li>dairy</li>
         <ul>
-            <li>milk</li>
-            <li>yogurt</li>
-            <li>ice cream</li>
-            <li>cottage cheese</li>
+          <li>milk</li>
+          <li>yogurt</li>
+          <li>ice cream</li>
+          <li>cottage cheese</li>
         </ul>
       </ul>
-      Smoothies may
-      be made using other ingredients, such as non-dairy milk, crushed ice,
-      sweeteners (honey or sugar), vinegar, whey powder, chocolate or
-      nutritional supplements, among others by personal choice.
-    </p>
+      Smoothies may be made using other ingredients, such as non-dairy milk,
+      crushed ice, sweeteners (honey or sugar), vinegar, whey powder, chocolate
+      or nutritional supplements, among others by personal choice.
 
-    <h2>Composition</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit repudiandae
-      reiciendis eligendi eos adipisci animi voluptate perspiciatis, aliquam
-      perferendis, magnam, nulla repellat maiores fuga qui earum atque
-      distinctio natus error.
-    </p>
-    <h2>Green smoothie</h2>
-    <img src="Green-Smoothie.jpeg" alt="A picture of Green Smoothie">
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit iusto
-      aliquam expedita quidem. Ipsum aliquam laudantium officia, quod reiciendis
-      adipisci praesentium saepe ducimus facere. Ipsa, similique praesentium?
-      Numquam, maiores libero! Dicta numquam, aspernatur at, eius, facere natus
-      culpa maiores sit quos earum qui unde? Delectus repellendus temporibus
-      nostrum eius, soluta placeat numquam qui voluptatem beatae in vero
-      consequatur rem consectetur! Ea laudantium fugiat atque sequi quis
-      adipisci rerum omnis odit, deserunt quaerat unde similique iure, modi
-      asperiores culpa quos corporis, ullam id. Culpa soluta reprehenderit
-      nulla, veniam totam eveniet a?
-    </p>
+      <h2>Composition</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+        repudiandae reiciendis eligendi eos adipisci animi voluptate
+        perspiciatis, aliquam perferendis, magnam, nulla repellat maiores fuga
+        qui earum atque distinctio natus error.
+      </p>
+      <h2>Green smoothie</h2>
+      <img src="Green-Smoothie.jpeg" alt="A picture of Green Smoothie" />
+      <p>
+        Here is the recipe Lorem ipsum, dolor sit amet consectetur adipisicing
+        elit. Iste non impedit sapiente ipsa, porro, dolor pariatur autem
+        dignissimos mollitia sequi, voluptas neque? Beatae amet possimus unde
+        eos, repudiandae nostrum error.
+      </p>
+    </main>
+    <footer>
+      <p>Created by Didi Bingdi Yang</p>
+      <ul>
+        <li><a href="email">Email me</a></li>
+        <li><a href="email">My Github</a></li>
+
+      </ul>
+    </footer>
   </body>
 </html>
 <!-- sfsdf  -->
