--- a/Register.html
+++ b/Register.html
@@ -9,9 +9,19 @@
   <body>
     <h1>Register the account</h1>
     <form action="/taco">
-      <input type="text">
-      <input type="password">
-      <input type="date">
+      <p>
+        <label for="username">Enter your username</label>
+        <input type="text" id="username" placeholder="Enter your username" />
+      </p>
+      <p>
+        <label for="password">Enter your password</label>
+        <input
+          type="password"
+          id="password"
+          placeholder="Enter your password"
+        />
+      </p>
+      <button>Submit</button>
     </form>
   </body>
 </html>
